# gg24-deepfunding-market-weights

./: .gitignore  01_context.py  02_duel.py  03_weights.py  04_stats.py  AGENTS.md  Makefile  README.md  competition.py  competition_stats.py  compute_weights.py  duel.py  generate_repository_context.py  pyproject.toml  weights.py
data/: candidate_repositories.csv  repository_context.json
data/phase_1/: candidate_repositories.csv
data/phase_1/runs/: 20251021144410.csv  20251021144625.csv  20251021150541.csv  20251021151451.csv  20251021152830.csv  20251021153549.csv  20251021172724.csv  20251021173256.csv  20251021182115.csv  20251021182300.csv  20251021182648.csv
data/phase_1/weights/: bradley-terry.csv  colley.csv  elo.csv  huber-log.csv  least-squares.csv  pagerank.csv  rank-centrality.csv
data/phase_2/: candidate_repositories.csv  repository_context.json
data/phase_2/runs/: 20251022103108.csv  20251023081111.csv  20251023101554.csv
data/phase_2/weights/: bradley-terry-regularized.csv  bradley-terry.csv  colley.csv  elo.csv  huber-log.csv  least-squares.csv  pagerank.csv  rank-centrality.csv
data/runs/: 20251021141528.csv  20251021142405.csv  20251021142758.csv  20251021143840.csv  20251021145139.csv  20251021150354.csv  20251021150850.csv  20251021150934.csv  20251021151451.csv  20251021152212.csv  20251021153846.csv  20251021171036.csv  20251021171205.csv  20251021171725.csv  20251021180440.csv  20251021181628.csv  20251021184113.csv
data/weights/: bradley-terry-regularized.csv  elo.csv  huber-log.csv  least-squares.csv  pagerank.csv
