[project]
name = "gg24-deepfunding-market-weights"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Gasquez", email = "davidgasquez@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic-ai>=1.2.0",
    "tqdm>=4.67.1",
]
